<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/nounButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/noun"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/verb_button"
        app:layout_constraintEnd_toStartOf="@+id/addNounBt"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addNounBt"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/new_pair"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/nounButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nounButton"
        app:layout_constraintTop_toTopOf="@+id/nounButton" />

    <Button
        android:id="@+id/verb_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/verb"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/adjective_button"
        app:layout_constraintEnd_toStartOf="@+id/add_verb_bt"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/add_verb_bt"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/new_pair"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/verb_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/verb_button"
        app:layout_constraintTop_toTopOf="@+id/verb_button" />

    <Button
        android:id="@+id/adjective_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/adjective"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_adj_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_adj_bt"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/new_pair"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/add_adverb_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adjective_button"
        app:layout_constraintTop_toBottomOf="@+id/add_verb_bt" />

    <Button
        android:id="@+id/adverb_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/adverb"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/add_adverb_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adjective_button" />

    <ImageButton
        android:id="@+id/add_adverb_bt"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/new_pair"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/adverb_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adverb_button"
        app:layout_constraintTop_toTopOf="@+id/adverb_button" />

    <Button
        android:id="@+id/other_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/other"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/add_other_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adverb_button" />

    <ImageButton
        android:id="@+id/add_other_bt"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/new_pair"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/other_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/other_button"
        app:layout_constraintTop_toTopOf="@+id/other_button" />

</android.support.constraint.ConstraintLayout>